welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: not found: type color
def coupstylo(c:color) {setcouleurBrosse(c);baisseBrosse();leveBrosse()}
                ^MethodsPicture:1: error: not found: value setcouleurBrosse
def coupstylo(c:color) {setcouleurBrosse(c);baisseBrosse();leveBrosse()}
                        ^MethodsPicture:2: error: not found: type color
def coupp(c:color) {coupstylo(c);avance();droite();avance()}
            ^MethodsPicture:4: error: not found: type color
def faireV(c:color) {coupp(c);coupp(c);coupstylo(c);gauche();avance();avance();gauche()}
             ^MethodsPicture:6: error: not found: value color
def motif() {{avance();avance();gauche();faireV(color.YELLOW)};{avance();avance();gauche();faireV(color.RED)};{avance();avance();gauche();faireV(color.BLUE)};{avance();avance();gauche();faireV(color.GREEN)}}
                                                ^MethodsPicture:6: error: not found: value color
def motif() {{avance();avance();gauche();faireV(color.YELLOW)};{avance();avance();gauche();faireV(color.RED)};{avance();avance();gauche();faireV(color.BLUE)};{avance();avance();gauche();faireV(color.GREEN)}}
                                                                                                  ^MethodsPicture:6: error: not found: value color
def motif() {{avance();avance();gauche();faireV(color.YELLOW)};{avance();avance();gauche();faireV(color.RED)};{avance();avance();gauche();faireV(color.BLUE)};{avance();avance();gauche();faireV(color.GREEN)}}
                                                                                                                                                 ^MethodsPicture:6: error: not found: value color
def motif() {{avance();avance();gauche();faireV(color.YELLOW)};{avance();avance();gauche();faireV(color.RED)};{avance();avance();gauche();faireV(color.BLUE)};{avance();avance();gauche();faireV(color.GREEN)}}
                                                                                                                                                                                                 ^