welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def coupstylo(c:color) {setcouleurBrosse(c);baisseBrosse();leveBrosse()}
def coupp(c:color) {coupstylo(c);avance();droite();avance()}

def faireV(c:color) {coupp(c);coupp(c);coupstylo(c);gauche();avance();avance();gauche()}

def motif() {{avance();avance();gauche();faireV(color.YELLOW)};{avance();avance();gauche();faireV(color.RED)};{avance();avance();gauche();faireV(color.BLUE)};{avance();avance();gauche();faireV(color.GREEN)}}
def changeLigne() {gauche(); for (p <- 1 to 7) {avance()};gauche();for (p <- 1 to 21) {avance()};droite()}
def motifSuivant() {for (p<- 1 to 7) {avance()}}



override def run() {for (i <-1 to 3) {for (j <- 1 to 3) {motif();motifSuivant()};changeLigne()}
}